fixed-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ body {
 .content-wrapper {
   display: flex;
   align-items: center;
+  text-align: center;
+  margin: 20px 0;
 }
 
 h1 {
